main.tf
//Providers
provider "aws" {
  version = "~> 3.61.0"
  region = "us-east-1"
  
}

provider "aws" {
  alias = "us-east-2"
  version = "~> 3.61.0"
  region = "us-east-2"
  
}

//Creating machines dev1, dev2, dev3
resource "aws_instance" "dev" {
  count = 3
  ami = var.amis["us-east-1"]
  instance_type = var.instance-type
  key_name = var.key_name

  tags = {
    "Name" = "dev${count.index}"
  }
  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}" ]
}

//Creating machine dev4 depends on bucket
resource "aws_instance" "dev4" {
  ami = var.amis["us-east-1"]
  instance_type = var.instance-type
  key_name = var.key_name

  tags = {
    "Name" = "dev4"
  }
  vpc_security_group_ids = [ "${aws_security_group.acesso-ssh.id}" ]
  depends_on = [aws_s3_bucket.dev4]
}

//Creating machine dev5
resource "aws_instance" "dev5" {
  ami = var.amis["us-east-1"]
  instance_type = var.instance-type
  key_name = var.key_name

  tags = {
    "Name" = "dev5"
  }
  vpc_security_group_ids = [ "${aws_security_group.acesso-ssh.id}" ]
}

//Creating machine dev6 (us-east-2) depends on bd and 
resource "aws_instance" "dev6" {
  provider = "aws.us-east-2"
  ami = var.amis["us-east-2"]
  instance_type = var.instance-type
  key_name = var.key_name

  tags = {
    "Name" = "dev6"
  }
  vpc_security_group_ids = [ "${aws_security_group.acesso-ssh-us-east-2.id}" ]
  depends_on = ["aws_dynamodb_table.dynamod-homologacao"]
}

//Creating machine dev7(us-east-2)
resource "aws_instance" "dev7" {
  provider = aws.us-east-2
  ami = var.amis.us-east-2
  instance_type = var.instance-type
  key_name = var.key_name

  tags = {
    "Name" = "dev7"
  }
  vpc_security_group_ids = [ "${aws_security_group.acesso-ssh-us-east-2.id}" ]

}
//bucket
resource "aws_s3_bucket" "dev4" {
  bucket = "marilabs-dev4"
  acl = "private"

  tags = {
    "Name" = "My bucket"

  }
}

//bd
resource "aws_dynamodb_table" "dynamod-homologacao" {
  provider = "aws.us-east-2"
  name = "GameScores"
  billing_mode = "PAY_PER_REQUEST"
  hash_key = "UserId"
  range_key = "GameTitle"

  attribute {
    name = "UserId"
    type = "S"
  }

  attribute {
    name = "GameTitle"
    type = "S"
  }
  
}
